--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
                 Welcome
                 To Our Web site....
                 We are
-                providing Food
+                providing Delicious Food
                 Items like Biryani
                 ,Ice
                 Creams,Pizza
@@ -44,7 +44,7 @@
     </section>
     <footer>
         <div>
-            &#169; Developed By Yasin
+            &#169; Developed By Yasin.....
         </div>
     </footer>
 
