--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
                 providing Delicious Food
                 Items like Biryani
                 ,Ice
-                Creams,Pizza
+                Creams and Pizza
             </h1>
 
         </div>
