--- a/Biryani.html
+++ b/Biryani.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <link href="style.css" rel="stylesheet">
-</head>
+</head>  
 <body>
   
-<header>
+<header2> 
 
         <div class="nav">
 
@@ -15,7 +15,7 @@
 
 
         </div>
-    </header>
+    </header2>
       <h1 class="Heading"> Biryani Items </h1>
       <section class="Biryani">
          <div class="image-container">
