--- a/Biryani.html
+++ b/Biryani.html
@@ -4,7 +4,7 @@
 </head>  
 <body>
   
-<header2> 
+<header> 
 
         <div class="nav">
 
@@ -15,7 +15,7 @@
 
 
         </div>
-    </header2>
+    </header>
       <h1 class="Heading"> Biryani Items </h1>
       <section class="Biryani">
          <div class="image-container">
